WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270831
Camera is paused occasionally when torch is enabled
https://bugs.webkit.org/show_bug.cgi?id=270831
Summary
Camera is paused occasionally when torch is enabled
Shawn Lee
Reported
2024-03-11 18:52:58 PDT
Created
attachment 470308
[details]
screencast Demo:
https://xcwsr5.csb.app/
Click "Start" to open the camera and enable the torch. Reload the page and repeat it a few times. Occasionally, the camera pauses, and you have to click "Start Using Camera" to resume it.
Attachments
screencast
(62.28 MB, video/mp4)
2024-03-11 18:52 PDT
,
Shawn Lee
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Shawn Lee
Comment 1
2024-03-11 18:53:54 PDT
(In reply to Shawn Lee from
comment #0
)
> Created
attachment 470308
[details]
> screencast > > Demo: >
https://xcwsr5.csb.app/
> > Click "Start" to open the camera and enable the torch. > Reload the page and repeat it a few times. > Occasionally, the camera pauses, and you have to click "Start Using Camera" > to resume it.
Tested on iphone 13 pro, ios 17.4
youenn fablet
Comment 2
2024-03-12 00:19:29 PDT
I am able to reproduce once. A few times, the torch is not switched on even though camera is on.
Radar WebKit Bug Importer
Comment 3
2024-03-12 00:19:57 PDT
<
rdar://problem/124434403
>
youenn fablet
Comment 4
2024-03-27 04:44:28 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26510
EWS
Comment 5
2024-03-28 05:42:59 PDT
Committed
276773@main
(7d9473d140a1): <
https://commits.webkit.org/276773@main
> Reviewed commits have been landed. Closing PR #26510 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug